# Omnira

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES  cursor.md  pyproject.toml
apps/desktop/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: chat_proxy.rs  commands.rs  config.rs  diagnostics.rs  errors.rs  gguf.rs  lib.rs  logging.rs  main.rs  paths.rs  process.rs  runtime.rs  storage.rs  types.rs
apps/desktop/src-tauri/tests/: runtime_spikes.rs  storage_tests.rs
data/: README.md
docs/: alpha-manual-verification.md  alpha-readiness-checklist.md  architecture.md  chat-provider.md  data-ownership-and-storage.md  design-principles.md  development-roadmap.md  development.md  environment-setup.md  local-security-boundary.md  packaging-process-model.md  privacy.md  release-qa-checklist.md  roadmap.md  runtimes-and-routing.md  vision.md
docs/adr/: 0001-rust-tauri-core-orchestrator.md  README.md
docs/evidence/: 2026-07-07-diagnostics-redaction-cargo-test.txt  2026-07-19-fetch-fail-closed.txt  2026-07-19-orphan-check.txt  PENDING-human-qa.md
docs/evidence/templates/: GATE-TEMPLATE.md
models/: README.md
scripts/dev/: orphan-check.ps1
scripts/diagnostics/: offline-smoke-test.ps1
scripts/packaging/: aggregate-licenses.ps1  fetch-llama-server.ps1  test-fetch-fail-closed.ps1
src/omnira/: __init__.py
src/omnira/api/: __init__.py  app.py  dependencies.py
src/omnira/config/: __init__.py  loader.py  models.py
src/omnira/core/: __init__.py  model_manager.py  runtime_manager.py
src/omnira/observability/: __init__.py  logging.py
src/omnira/providers/: __init__.py  base.py  interfaces.py  (+3 more)
(+21 files in other folders)
