[package]
name = "omnira"
version = "0.1.0"
description = "Omnira -- local-first AI desktop app"
authors = ["Omnira contributors"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "omnira_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Do NOT enable the "devtools" feature here -- release builds must not expose
# WebView2 devtools (see docs/alpha-readiness-checklist.md).
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "sync", "time", "macros", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
rand = "0.9"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
